--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@actions/core": "^1.10.1",
     "axios": "^1.6.8",
     "mammoth": "^1.7.1",
     "turndown": "^7.1.3"
